# HuaWei-Competition

./: .gitignore  Algorithm.cpp  Algorithms.cpp  Algorithms.h  Array.cpp  Array.h  Berth.cpp  Berth.h  Boat.cpp  Boat.h  CMakeLists.txt  Constants.cpp  Constants.h  Controller.cpp  Controller.h  Goods.cpp  Goods.h  Init.cpp  Init.h  Input.cpp  Input.h  Map.cpp  Map.h  Output.cpp  Output.h  Point.cpp  Point.h  README.md  Robot.cpp  Robot.h  Variation.cpp  Variation.h  fastio.cpp  fastio.h  main  main.cpp  main.h  make.sh  submission.bat
.github/workflows/: msvc.yml
service/: _service_header.h  service_header.h
service/init/: _init_header.h  init.h  init_header.h
service/input/: _input_header.h  input.h  input_header.h
stastic/: _stastic_header.h  global_const_variation.h  stastic_header.h
stastic/pojo/: _pojo_header.h  berth.h  boat.h  pojo_header.h  robot.h
